# pyspecdata

./: .buildinfo  .gitignore  .nojekyll  .readthedocs.yml  2to3.sh  AGENTS.md  CHANGES.txt  LICENSE.md  MANIFEST.in  README.rst  as-jmfrancklab1_files.txt  changelog.rst  compile.sh  conda_list_info.txt  conda_upgrade.md  data.mat  data.txt  datadir.py  dettau.py  develop.html  distribute.sh  example_working_copy.tex  figlist.html  foraudrey_dnp_code.py  fornotebook.py  fourier.html  genindex.html  git reset--merge 0c7d2d1  gpib_eth.py  h5nmr.py  index.html  install_gui.py  install_gui.ui  interptau.py  latex.py  latexscript.py  latexscripts.html  library.bib  log.txt  makefile  (+48 more)
.github/workflows/: flake8.yml  publish.yml  pypi.yml  pypi.yml.orig  pytest.yml  pytest.yml.orig  todo_check.sh
_sources/: modules.rst.txt  nddata.rst.txt  notebook.rst.txt
_sources/auto_api/: pyspecdata.pytables_helper.rst.txt  pyspecdata.rst.txt
auto_api/: modules.html  pyspecdata.axis_manipulation.html  pyspecdata.file_saving.html  pyspecdata.html  pyspecdata.plot_funcs.html  pyspecdata.pytables_helper.html
demos/: ILT_demo_231121.py  NNLS_Tikhonov_190104.py  aab_simulation_2DILT.py  nddata_NNLS_Tikhonov_190104.py
doc/: Makefile  conf.py  develop.rst  fourier.rst  fourier.tex  index.rst  latexscripts.rst  make.bat  modules.rst  nddata.rst  notebook.rst  pyspecdata.rst
doc/source/: acert_hdf.rst  axis_manipulation.rst  conf.py  figlist.rst  fourier.rst  hfss.rst  index.rst  modules.rst  nddata.rst  notebook.rst  pyspecdata.rst
doc_src/: Makefile  axis_object_plan.rst  build_docs.sh  conf.py  examples.rst  figlist.rst  find_files.rst  fitdata.rst  index.rst  nddata.rst  notebook.rst  pyspecdata.rst  sg_execution_times.rst
doc_src/_static/: custom.css
doc_src/auto_api/: modules.rst  pyspecdata.load_files.rst  pyspecdata.plot_funcs.rst  pyspecdata.rst
doc_src/auto_examples/: README.txt  index.rst  plot_fit_fake_data.ipynb  plot_fit_fake_data.rst  plot_fit_fake_data_codeobj.pickle
docs/: .buildinfo  axis_manipulation.html  axis_object_plan.html  classes.html  examples.html  figlist.html  find_files.html  fitdata.html  fitdata_old.html  fourier.html  genindex.html  index.html  latexscripts.html  modules.html  nddata.html  notebook.html  objects.inv  py-modindex.html  pyspecdata.html  search.html  searchindex.js  sg_execution_times.html  temp_stubs.html  units.html
docs/_sources/: classes.rst.txt  figlist.rst.txt  fitdata.rst.txt  index.rst.txt  (+6 more)
docsource/: Makefile  notebook.rst
examples/: 2DILT.py  BRD_test.py  BSA_calibration.py  Cary_simple.py  DCCT_dimensions.py  DCCT_function.py  DCCT_plotting.py  DCCT_side_by_side.py  QESR.py  README.rst  README.txt  alex_subplots.py  basic.py  basic_example.py  bezier.py  calculate_covariance.py  cary_data.py  chunk.py  concatenate.py  concatentate.py  convolution.py  covariance.py  covariance_example.py  data_files.csv  ellmans.py  epr_u_domain.py  error_example.py  errorprop.py  esr_example.py  example_fit_multi_datasets.py  example_fit_with_bounds.py  extend.py  fit_ESR_voigt.py  fit_complex.py  fit_complex_with_transform.py  fit_fake_data.py  fit_multi_datasets.py  fit_with_bounds.py  fourier_aliasing.py  fourier_padding.py  (+27 more)
examples_undoc/: concatenate.py  nddata_NNLS_Tikhonov_190104.py  scaled_transform.py  unit_checking.py  zenodo_download.py  zenodo_upload.py
lapack-3.4.0/: LICENSE  Lapack340_gfwin.txt  M_EIGTST  M_LINTST  Makefile  lapack_testing.py  make.inc  makelibs.bat  makelibs.sh  testlibs.bat
meson_f2py/: _nnlsmodule.c
nnls/: nnls.f  nnls.pyf  nnls_regularized.f90  nnls_regularized_loop.f90  venk_brd.f90
notebook/: article_wrapper.tex  datenow.sh  forarticles.sty  foraudrey_dnp_code.py  forgui.py  local.mat  makefile  mycomments.sty  myhyperref.sty  mylists.sty  mynotebookminimal.sty  myparagraphformatting.sty  mypython.sty  mysoftware_style.sty  pythonout.sh  repeat_make.sh  software_doc.tex  standalone_compilation.py  standalone_example.py
paramset_pyspecdata/: __init__.py
protocols/: biol_demo.tex  dna.tex  dnp_freelabel.tex  dnp_vesicles.tex  epr.tex  gro_es.tex  hiv.tex
pyspecdata/: .core.py.un~  DCCT_function.py  __init__.py  acert_hdf5.py  acert_hfss.py  anothertest.f90  axis_class.py  core.py  core.py.orig  core.py~  datadir.py  dettau.py  dict_utils.py  error_utils.py  evince_vim_dbus.py  figlist.py  fl_dummy.py  forgui.py  fornotebook.py  fortrancall.h  general_functions.py  generate_fake_data.py  gpib_eth.py  h5nmr.py  hdf_utils.py  hindman.py  ipy.py  latex_cycle_files.py  latexscript.py  latexscripts.py  lmfitdata.py  lmfitdataGUI.py  log_test.py  lprmpt.c  matlablike.py  meson.build  mpl_utils.py  nddata_hdf5.py  ndshape.py  nmr.py  (+16 more)
pyspecdata/axis_manipulation/: __init__.py  inhomog_coords.py  meson.build  register_axis.py  secsy.py  shear.py
pyspecdata/file_saving/: __getstate__.py  __init__.py  __setstate__.py  hdf5_write.py  hdf_save_dict_to_group.py  meson.build
pyspecdata/fourier/: __init__.py  _ft_conj.py  convolve.py  ft.py  ft_shift.py  ftshift.py  ift.py  meson.build  shear.py  skew.py
pyspecdata/load_files/: __init__.py  acert.py  bruker_esr.py  bruker_nmr.py  load_cary.py  meson.build  open_subpath.py  prospa.py  zenodo.py
pyspecdata/matrix_math/: __init__.py  dot.py  meson.build  nnls.py  svd.py
pyspecdata/plot_funcs/: DCCT.py  DCCT_function.py  __init__.py  image.py  meson.build  pcolormesh.py
pyspecdata/pytables_helper/: __init__.py  functions.py
rclone-v1.59.1-windows-amd64/: README.html  README.txt  git-log.txt  rclone.1
scripts/: entry_point_template
summaries/: nddata_expl.tex  writeup_software.tex
test/: captured_output.py  run_test.sh  test_logging.py
tests/: conftest.py  sample.pyspecdata  test_axis_collection.py  test_cli_fallback.py  test_error_propagation.py  test_general_functions.py  test_hdf5_layout.py  test_highlevel_nnls.py  test_matrix_mult.py  test_nddata_axis.py  test_nddata_coords_property.py  test_ndshape.py  test_ndshape_base.py  test_qt_gui.py  test_qt_phase_correction_demo.py  test_search_filename.py  test_units.py  test_xepr_load_acqu.py
(+420 files in other folders)
