[build-system]
requires = ["meson-python>=0.15", "meson>=1.2", "ninja>=1.11",
         "numpy>=1.26.5", # 1.26.4 has weird fortran issues
         ]
build-backend = "mesonpy"

[project]
name = "pyspecdata"
dependencies = [
    "sympy",
    "numpy>=1.26.5", # because we've done a bit of work to make this work
    "numexpr>=2.10.0", # less than this causes errors with pytables
    "tables>=3.10.1", # less than this causes errors with pytables
    "scipy",
    "h5py",
    "matplotlib>=3.8.0",  # sharex is a problem in 3.5-6
    "pillow",
    "pint",
    "lmfit>=1.1",  # we recently found that at least 1.0.3 generates
    #                output parameters that are unchanged, but still
    #                returns a "success" condition
]
version = "0.9.45.3"
description = "Object-Oriented, Multi-dimensional Spectroscopic Data Processing"
readme = "README.rst"  # Ensure this matches the README file's name
readme-content-type = "text/x-rst"  # Change if using Markdown
authors = [
    { name = "John Franck", email = "john.franck@outlook.com" }
]

[tool.mesonpy]
setup-kwargs = { native_file = "cross_file.txt" }

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39']
preview = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]

[project.scripts]
update_notebook_pythonscripts = "pyspecdata.latexscripts:main"
pdflatex_notebook_wrapper = "pyspecdata.latexscripts:wraplatex"
pdflatex_notebook_view_wrapper = "pyspecdata.latexscripts:wrapviewer"
pyspecdata_dataconfig = "pyspecdata.datadir:genconfig"
pyspecdata_register_dir = "pyspecdata.datadir:register_directory"
