py_sources=[
'__init__.py',
'axis_class.py',
'core.py',
'datadir.py',
'dict_utils.py',
'figlist.py',
'fl_dummy.py',
'fornotebook.py',
'general_functions.py',
'generate_fake_data.py',
'hdf_utils.py',
'ipy.py',
'latexscripts.py',
'lmfitdata.py',
'lmfitdataGUI.py',
'mpl_utils.py',
'ndshape.py',
'nnls.py',
'placeholder.py',
'rec_utils.py',
'units.py',
'version.py',
]
py.install_sources(
  py_sources,
  subdir: 'pyspecdata')
# find . -type d

subdir('file_saving')
subdir('axis_manipulation')
subdir('plot_funcs')
subdir('matrix_math')
subdir('fourier')
subdir('load_files')

